--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -12,9 +12,9 @@ body {
 
 img {
   display: block;
-  width: 50vw;
+  height: 50vw;
   max-width: 80%;
-  height: auto;
+  width: auto;
 }
 
 .container {
