--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,4 +1,4 @@
-body {
+.muckBody {
   background-color: #f2bb05;
 }
 
@@ -6,6 +6,7 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 5vh;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .video {
