--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -9,6 +9,38 @@
   color: rgba(0, 0, 0, 0.8);
 }
 
+.muckPlan {
+  display: flex;
+  width: 100vw;
+  max-width: 100vw;
+}
+
+.muckGP-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  margin-inline: 1.5rem;
+  padding-block: 5rem;
+}
+
+.muckGP {
+  border-radius: 15px;
+  width: 30vw;
+  max-width: 100%;
+}
+
+.heading {
+  display: flex;
+  justify-content: center;
+  padding-top: 3vh;
+  color: rgba(0, 0, 0, 0.8);
+  font-family: "p22-nudgewink-pro", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 5vmin;
+}
+
 .video {
   width: 100%;
   border-radius: 15px; /* Add rounded corners with a radius of 15px */
@@ -18,6 +50,5 @@
 .video-container {
   display: flex;
   justify-content: center;
-  height: 100vh;
-  margin: 20px;
+  width: 100vw;
 }
