--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,3 +1,15 @@
+.content {
+  max-width: 766px;
+  margin: auto;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.sub {
+  color: gray;
+  font-size: 13px;
+}
+
 .muckBody {
   background-color: #f2bb05;
 }
@@ -51,4 +63,10 @@
   display: flex;
   justify-content: center;
   width: 100vw;
+}
+
+.parent {
+  width: 45%;
+  margin-left: auto;
+  margin-right: auto;
 }
