--- a/src/components/helper/CardHelper.css
+++ b/src/components/helper/CardHelper.css
@@ -68,6 +68,7 @@ img {
 
 .card_img {
   width: 40vw;
+  height: 40vw;
   border-radius: 1.5rem;
 }
 
@@ -188,7 +189,7 @@ img {
   }
 
   .card_img {
-    height: auto;
+    height: 24vh;
     width: 24vh;
   }
 
@@ -258,6 +259,7 @@ img {
 
   .card_img {
     width: 25vw;
+    height: 25vw;
   }
 
   .card_data {
