--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -49,3 +49,15 @@ img {
   margin-left: 2vmin;
   margin-right: 2vmin;
 }
+
+.card_loading,
+.card_error {
+  grid-column: 1 / -1;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 2.5vmin;
+}
+
+.card_error {
+  color: #b00020;
+}
