--- a/src/components/helper/CardHelper.css
+++ b/src/components/helper/CardHelper.css
@@ -59,6 +59,7 @@ img {
 .card_container {
   display: grid;
   row-gap: 3.5rem;
+  column-gap: 2rem;
 }
 
 .card_article {
@@ -185,7 +186,9 @@ img {
   }
 
   .card_container {
-    row-gap: 1.5vh;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 3vw;
+    row-gap: 3vh;
   }
 
   .card_img {
@@ -253,17 +256,24 @@ img {
   }
 
   .card_container {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 5vw;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    column-gap: 3vw;
   }
 
   .card_img {
-    width: 25vw;
-    height: 25vw;
+    width: 20vw;
+    height: 20vw;
   }
 
   .card_data {
-    width: 22.5vw;
-    padding-inline: 2.5rem;
+    width: 18vw;
+    padding-inline: 2rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .card_container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    column-gap: 3vw;
   }
 }
